RenderInline::absoluteRects does some incorrect layout math https://bugs.webkit.org/show_bug.cgi?id=87036

Reviewed by Eric Seidel.

Source/WebCore:

http://trac.webkit.org/changeset/88297/trunk/Source/WebCore/rendering/RenderInline.cpp
contained a typo.  We should accumulate offsets, not add sizes to
offsets.

Test: fast/inline/boundingBox-with-continuation.html

* rendering/RenderInline.cpp:
(WebCore::RenderInline::absoluteRects):
(WebCore):

LayoutTests:

* fast/inline/boundingBox-with-continuation-expected.txt: Added.
* fast/inline/boundingBox-with-continuation.html: Added.


Canonical link: https://commits.webkit.org/104911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118094 268f45cc-cd09-0410-ab3c-d52691b4dbfc